# django-test-project1

./: .gitignore  Procfile  pyproject.toml  requirements.txt
messager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
messager/chats/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
messager/chats/migrations/: 0001_initial.py  0002_alter_message_message.py  0003_alter_message_message.py  0004_chat_new_message.py  0005_alter_message_pub_date.py  0006_alter_message_pub_date.py  0007_alter_message_message.py
messager/staticfiles/: staticfiles.json
messager/staticfiles/chats/css/: chats.css  message.css  messages.css
messager/templates/: chats.html  form.html  home.html  index.html  message.html  messages.html  users.html
messager/users/: apps.py  forms.py  models.py  urls.py  views.py
messager/users/migrations/: 0001_initial.py
